# clap-logging

./: CHANGELOG.md  Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: main.rs
examples/: demo.rs
src/: app.rs  color.rs  config.rs  env.rs  error.rs  lib.rs  log.rs
